--- a/phase1.html
+++ b/phase1.html
@@ -21,6 +21,7 @@ function mouseOut() {
                 
 <body style="background-color:rgb(72, 72, 72);"><body>
 <center><h1 style="color:rgb(187, 186, 186);"> Call us on 8765786123, or email us at silverjewellery@gmail.com</h1></center>
+   <center>You can also contact us at <address>KC HIGH, OMR ROAD,CHENNAI</address><center>
 <center><h2 style="color:rgb(187, 186, 186);"> thank you!</h2></center>
     
 </html>
